--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin:0 200px;
 }
 
 nav>ul {
@@ -40,6 +41,21 @@ nav a {
     text-decoration: none;
     color: #474747;
 }
+/* header related style*/
+.header {
+background-color: #fff8f3;
+
+}
+
+.banner{
+    padding: 30px 30px 30 px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
+}
+
 
 body {
     font-family: 'lato', sans-serif;
