--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,7 +9,7 @@
     border: 0;
     color: white;
     font-size: 20px;
-    font-weight:700 ;
+    font-weight: 700;
     padding: 15px 35px;
 
 }
@@ -24,7 +24,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin:0 200px;
+    margin: 0 200px;
 }
 
 nav>ul {
@@ -41,19 +41,58 @@ nav a {
     text-decoration: none;
     color: #474747;
 }
+
 /* header related style*/
 .header {
-background-color: #fff8f3;
+    background-color: #fff8f3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 
 }
 
-.banner{
-    padding: 30px 30px 30 px 150px;
+.banner {
+    padding: 30px 30px 0 px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner .profile-pic{
+.banner-content{
+    max-width: 500px;
+
+}
+
+.banner .profile-pic {
     width: 500px;
+}
+
+.banner-greeting{
+    font-size: 45px;
+    margin-bottom: 0;
+    color:#474747;
+}
+.banner-title{
+    font-size: 85px;
+    font-size: 700;
+    margin-top: 5px ;
+    margin-bottom: 20px;
+}
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background-color: #fff8f3;
+    margin: 130px 0;
+}
+.section-title{
+   color: #181818; 
+   text-align: center;
+   font-size: 35px;
+   font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
 
 
@@ -61,3 +100,11 @@ body {
     font-family: 'lato', sans-serif;
     font-family: 'Open Sans' sans-serif;
 }
+/*main section styles*/
+
+
+
+
+
+/*about section style*/
+
