--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,12 +77,7 @@ nav a {
     margin-top: 5px ;
     margin-bottom: 20px;
 }
-.about{
-    padding: 130px;
-    border-radius: 10px;
-    background-color: #fff8f3;
-    margin: 130px 0;
-}
+
 .section-title{
    color: #181818; 
    text-align: center;
@@ -94,6 +89,10 @@ nav a {
     text-align: center;
     font-size: 18px;
 }
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 
 body {
@@ -102,9 +101,16 @@ body {
 }
 /*main section styles*/
 
-
-
-
-
 /*about section style*/
-
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background-color: #fff8f3;
+    margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
+     justify-content: space-around;
+.about-info{
+    text-align: center;
+}
