--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -57,7 +57,8 @@ nav a {
     align-items: center;
     justify-content: space-between;
 }
-.banner-content{
+
+.banner-content {
     max-width: 500px;
 
 }
@@ -66,30 +67,33 @@ nav a {
     width: 500px;
 }
 
-.banner-greeting{
+.banner-greeting {
     font-size: 45px;
     margin-bottom: 0;
-    color:#474747;
+    color: #474747;
 }
-.banner-title{
+
+.banner-title {
     font-size: 85px;
     font-size: 700;
-    margin-top: 5px ;
+    margin-top: 5px;
     margin-bottom: 20px;
 }
 
-.section-title{
-   color: #181818; 
-   text-align: center;
-   font-size: 35px;
-   font-weight: 700;
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
 }
-.section-description{
+
+.section-description {
     color: #757575;
     text-align: center;
     font-size: 18px;
 }
-main{
+
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
@@ -99,21 +103,55 @@ body {
     font-family: 'lato', sans-serif;
     font-family: 'Open Sans' sans-serif;
 }
+
 /*main section styles*/
+main section{
+    margin-top: 130px;
+}
 
 /*about section style*/
-.about{
+.about {
     padding: 130px;
     border-radius: 10px;
     background-color: #fff8f3;
     margin: 130px 0;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
-     justify-content: space-around;
-.about-info{
+    justify-content: space-around;
+}
+
+.about-info {
     text-align: center;
 }
-#what-i-do-description{
+
+/*skill related styles*/
+
+#what-i-do-description {
     padding: 30px 150px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+
+.skill-description {
+    color: #757575;
+}
+
+/*resume section style*/
+.resume-colume-taitel{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700px;
 }
