--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -105,7 +105,7 @@ body {
 }
 
 /*main section styles*/
-main section{
+main section {
     margin-top: 130px;
 }
 
@@ -150,8 +150,45 @@ main section{
 }
 
 /*resume section style*/
-.resume-colume-taitel{
+.resume-colume-taitel {
     color: #474747;
     font-size: 30px;
     font-weight: 700px;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700px;
+}
+
+resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+
+
+}
+.resume-item-institution{
+    margin-bottom: 10px;
+    margin-top:0px;
+}
+
+.resume-item-instiute,
+.resume-item-description {
+    color: #757575;
+}
+
+.resume-container hr {
+    margin: 30px;
+}
+.btn-primary-fotter{
+   margin-top: 50px;
+    text-align: center;
 }
