--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -195,7 +195,28 @@ resume-item-title {
 /*footer style*/
 footer{
     display: flex;
+    gap: 100px;
     background-color: #fff8f3;
     padding: 130px 200px;
     margin-top: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-linls{
+    margin-left: 25px;
+}
+
+.contact input[type="text"],.contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border: 0px;
+    border-radius: 5px;
+    background:#fff;
+    width: 100%;
+}
+#btn-id{
+    margin-top:30px ;
 }
