--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -45,9 +45,9 @@ nav a {
 /* header related style*/
 .header {
     background-color: #fff8f3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 
 }
 
@@ -175,9 +175,10 @@ resume-item-title {
 
 
 }
-.resume-item-institution{
+
+.resume-item-institution {
     margin-bottom: 10px;
-    margin-top:0px;
+    margin-top: 0px;
 }
 
 .resume-item-instiute,
@@ -188,35 +189,42 @@ resume-item-title {
 .resume-container hr {
     margin: 30px;
 }
-.btn-primary-fotter{
-   margin-top: 50px;
+
+.btn-primary-fotter {
+    margin-top: 50px;
     text-align: center;
 }
+
 /*footer style*/
-footer{
+footer {
     display: flex;
     gap: 100px;
     background-color: #fff8f3;
     padding: 130px 200px;
     margin-top: 100px;
 }
-.footer-column{
+
+.footer-column {
     width: 50%;
 }
-.social-linls{
+
+.social-linls {
     margin-left: 25px;
 }
 
-.contact input[type="text"],.contact input[type="email"], textarea{
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
     display: block;
     margin-bottom: 25px;
     padding: 18px 35px;
     color: #757575;
     border: 0px;
     border-radius: 5px;
-    background:#fff;
+    background: #fff;
     width: 100%;
 }
-#btn-id{
-    margin-top:30px ;
+
+#btn-id {
+    margin-top: 30px;
 }
